change --> remove all images not webp format, change portfolio check all btn, chanse section dividers

--- a/src/css/style.css
+++ b/src/css/style.css
@@ -604,6 +604,9 @@ body P {
   height: auto;
 }
 
+.pallet_icon {
+  scale: 0.75;
+}
 .pallet_icon .cls-1 {
   fill: var(--bgC_C);
 }
@@ -900,7 +903,7 @@ body P {
 }
 
 .js_icon_svg {
-  transform: scale(0.8);
+  transform: scale(0.75);
 }
 .js_icon_svg .cls-1 {
   fill: #f7df1e;
@@ -1341,7 +1344,7 @@ body P {
   width: 100%;
   height: auto;
   margin-top: 2rem;
-  -webkit-text-stroke: 1px var(--FC);
+  -webkit-text-stroke: 2px var(--FC);
   color: transparent;
   font-size: var(--FS_X);
 }
@@ -2144,7 +2147,6 @@ body P {
 }
 
 .section {
-  margin-bottom: 2rem;
   height: auto;
   display: flex;
   flex-direction: column;
@@ -2402,6 +2404,8 @@ body P {
 
 .portfolio_section .portfolio_btn {
   border-radius: 0 0 0.5rem 0.5rem;
+  background: transparent;
+  border: solid 2px var(--SC);
 }
 
 .nav_menu {
