--- a/src/css/style.scss
+++ b/src/css/style.scss
@@ -1079,6 +1079,7 @@ body {
     }
 }
 .python_icon_svg {
+    scale: 0.75;
     .cls-1 {
         fill: #366a96;
     }
@@ -1671,7 +1672,6 @@ body {
         opacity: 1;
     }
 }
-//!  *//
 .animation_up {
     position: relative;
     z-index: -1;
@@ -1712,14 +1712,12 @@ body {
     transition: var(--T-S);
 }
 */
-//!
 
 .content {
     min-width: 250px;
     width: 1600px;
     max-width: 90%;
 }
-
 .btns_container,
 .btn_container {
     padding-top: 1rem;
@@ -1752,8 +1750,6 @@ body {
         }
     }
 }
-//^
-
 .input_container {
     width: 100%;
     height: fit-content;
@@ -2432,7 +2428,10 @@ body {
     .portfolio_btn {
         border-radius: 0 0 0.5rem 0.5rem;
         background: transparent;
-        border: solid 2px var(--SC);
+        border: solid 2px var(--FC);
+        .label_btn {
+            color: var(--TC);
+        }
     }
 }
 .nav_menu {
