--- a/src/css/style.scss
+++ b/src/css/style.scss
@@ -2003,7 +2003,7 @@ body {
 }
 .inner_link_btn {
     text-decoration: underline;
-    color: var(--SC);
+    color: var(--FC);
     &:visited {
         color: inherit;
     }
