--- a/src/css/style.scss
+++ b/src/css/style.scss
@@ -1589,6 +1589,7 @@ body {
         width: 100%;
         height: 30rem;
         object-fit: cover;
+        object-position: top;
         border-radius: 0.5rem;
     }
     .info_card {
